--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,12 +37,11 @@ header nav ul li a {
   font-weight: lighter;
   font-size: 22px;
 }
-
+/*end header style*/
 body {
   color: #39a6b2;
   font-family: Helvetica, Arial, sans-serif;
 }
-
 /* Hero Style Start */
 .hero {
   background-image: url("../images/hero-bg.jpg");
@@ -92,7 +91,68 @@ margin: 5px 0 15px 0;
   border: 0;
   padding: 10px 20px;
 }
-/* her style end*/
+/* hero style end*/
+/* general section style*/
+.section-title {
+  font-size: 55px;
+  color: #024e76;
+  margin-bottom: 35px;
+  padding: 0 100px 20px 100px;
+  display: inline-block;
+  border-bottom: 3px solid;
+}
+
+.primary-border {
+  border-color: #fce138;
+}
+
+.secondary-border {
+  border-color: #39a6b2;
+}
+/*general section style end*/
+/*start "what we do" style*/
+.intro {
+  text-align: center;
+}
+
+.intro p {
+  line-height: 1.7;
+  color: #39a6b2;
+  width: 80%;
+  font-size: 20px;
+  margin: 0 auto;
+}
+/*end "what we do"style*/
+
+/*start "what you do" style*/
+.steps {
+  text-align: center;
+  background: #fce138;
+}
+
+.steps div {
+  margin-bottom: 80px;
+}
+
+.steps img{
+  width: 15%;
+  margin: 10px 0;
+}
+
+.steps h3 {
+  color: #024e76;
+  font-size: 46px;
+  margin-top: 10px;
+}
+
+.steps p{
+  color: #39a6b2;
+  font-size: 23px;
+}
+.steps span{
+font-size: 38px;
+}
+/*end "what you do" style*/
 
 footer {
   background: #fce138;
