--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,14 +114,16 @@ margin: 5px 0 15px 0;
   padding: 10px 20px;
 }
 /* hero style end*/
+
 /*general section style*/
 .section-title {
   font-size: 55px;
   color: #024e76;
-  margin-bottom: 35px;
-  padding: 0 100px 20px 100px;
-  display: inline-block;
   border-bottom: 3px solid;
+  padding: 20px;
+  text-align: center;
+  margin: 0 auto 35px auto;
+  width: 50%;
 }
 
 .primary-border {
@@ -132,12 +134,10 @@ margin: 5px 0 15px 0;
   border-color: #39a6b2;
 }
 /*general section style end*/
-/*start "what we do" style*/
-.intro {
-  text-align: center;
-}
 
+/*start "what we do" style*/
 .intro p {
+  text-align: center;
   line-height: 1.7;
   color: #39a6b2;
   width: 80%;
@@ -148,7 +148,6 @@ margin: 5px 0 15px 0;
 
 /*start "what you do" style*/
 .steps {
-  text-align: center;
   background: #fce138;
 }
 
@@ -175,6 +174,7 @@ margin: 5px 0 15px 0;
 font-size: 38px;
 }
 /*end "what you do" style*/
+
 /*begin style for trainer section*/
 .text-left {
   text-align: left;
@@ -185,7 +185,11 @@ font-size: 38px;
 }
 
 .trainers {
-  text-align: center;
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .trainer {
@@ -226,7 +230,6 @@ font-size: 38px;
 
 /*contact style section*/
 .contact {
-  text-align: center;
   background: #024e76;
 }
 
@@ -291,4 +294,17 @@ footer a {
 
 section {
   padding: 60px;
+}
+
+/*utilites*/
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.flex-row{
+  display: flex;
 }
